[package]
name = "stock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.1.1", features=["derive"]}
yahoo_finance_api = "1.3.0"
tokio-test = "0.4.2"
chrono = "0.4.23"

[dev-dependencies]
assert_cmd = "1"